test/configCases/errors/chunk-name-path-traversal-require-ensure/index.js
require.ensure([], () => require("./mod.js"), "../escaped");
